# fizzbuzz

./: .gitignore  README.md  app.py  pyproject.toml  spec.md
templates/: index.html  result.html
