[project]
name = "fizzbuzz"
version = "0.1.0"
description = "FizzBuzz Flask/HTMX app"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty]
environment.python = ".venv/bin/python"
